--- a/app/views/gists/index.html.erb
+++ b/app/views/gists/index.html.erb
@@ -1,11 +1,11 @@
-<h1>Listing gists</h1>
+<h1>Wszystkie wrzutki</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Snippet</th>
-      <th>Lang</th>
-      <th>Description</th>
+      <th>Kod</th>
+      <th>Język</th>
+      <th>Opis</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,12 +13,12 @@
   <tbody>
     <% @gists.each do |gist| %>
       <tr>
-        <td><%= gist.snippet %></td>
+        <td><%= raw Pygments.highlight(gist.snippet.length > 50 ? gist.snippet[0,50] + "..." : gist.snippet, lexer: gist.lang) %></td>
         <td><%= gist.lang %></td>
         <td><%= gist.description %></td>
-        <td><%= link_to 'Show', gist %></td>
-        <td><%= link_to 'Edit', edit_gist_path(gist) %></td>
-        <td><%= link_to 'Destroy', gist, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Podgląd', gist %></td>
+        <td><%= link_to 'Edycja', edit_gist_path(gist) %></td>
+        <td><%= link_to 'Usuń', gist, method: :delete, data: { confirm: 'Czy jesteś pewny?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Gist', new_gist_path %>
+<%= link_to 'Dodaj kod', new_gist_path %>
