Poprawa wyglądu indexu

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,8 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
+<header class="navbar navbar-fixed-top" style="padding: 5px; background-color: #083952">
   <div class="navbar-inner">
     <div class="container">
-      <%= link_to "Aplikacja na zaliczenie", '#', id: "logo" %>
-      <nav>
-        <ul class="nav pull-right">
-          <li><%= link_to "Home",    '#' %></li>
-          <li><%= link_to "Help",    '#' %></li>
-          <li><%= link_to "Sign in", '#' %></li>
-        </ul>
-      </nav>
+      	<a href="/gists" class="btn btn-primary btn-lg active" role="button"> Strona główna</a>
+	<a title="Tylko dla wybranych ;)" href="https://github.com/lipek92/my_gists" class="btn btn-primary btn-lg active" role="button"> Projekt na Github'ie</a>
     </div>
   </div>
 </header>
