--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -37,13 +37,13 @@ textarea {
 
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
-margin-top: 80px;
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 2em;
   letter-spacing: -2px;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 h2 {
@@ -84,8 +84,9 @@ p {
 footer {
   margin-top: 45px;
   padding-top: 5px;
-  border-top: 1px solid $grayMediumLight;
-  color: $grayLight;
+  border-top: 1px solid #f5f5f5;
+  color: #f5f5f5;
+  font-style: italic;
   a {
     color: $gray;
     &:hover {
@@ -106,11 +107,13 @@ footer {
 }
 
 table { 
-color: #333;
+color: #fff;
 font-family: Helvetica, Arial, sans-serif;
-width: 100%; 
-border-collapse: 
-collapse; border-spacing: 0; 
+width: 100%;
+border: 1px solid #083952;
+border-collapse: collapse; 
+border-spacing: 0;
+
 }
 
 td, th { 
@@ -120,19 +123,18 @@ transition: all 0.3s;  /* Simple transition for hover effect */
 }
 
 th {
-background: #DFDFDF;  /* Darken header a bit */
+background: #083952;  /* Darken header a bit */
 font-weight: bold;
+text-align: center; 
 }
 
 td {
-background: #FAFAFA;
+background: #10618c;
 text-align: center;
 }
 
 /* Cells in even rows (2,4,6...) are one color */ 
-tr:nth-child(even) td { background: #F1F1F1; }   
+tr:nth-child(even) td { background: #1888b9; }   
 
 /* Cells in odd rows (1,3,5...) are another (excludes header cells)  */ 
-tr:nth-child(odd) td { background: #FEFEFE; }  
-
-tr td:hover { background: #666; color: #FFF; } /* Hover cell effect! */
+tr:nth-child(odd) td { background: #10618c; }  
