Poprawa wyglądu indexu

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header class="navbar navbar-fixed-top" style="padding: 5px; background-color: #083952">
-  <div class="navbar-inner">
+  <div>
     <div class="container">
       	<a href="/gists" class="btn btn-primary btn-lg active" role="button"> Strona główna</a>
 	<a title="Tylko dla wybranych ;)" href="https://github.com/lipek92/my_gists" class="btn btn-primary btn-lg active" role="button"> Projekt na Github'ie</a>
