poprawa buttonow, spolszczenia i fieldow

--- a/app/views/gists/show.html.erb
+++ b/app/views/gists/show.html.erb
@@ -1,15 +1,16 @@
-<p id="notice"><%= notice %></p>
+<p id="noticewlasny"><%= notice %></p>
 <p>
-  <strong>Lang:</strong>
+  <strong>Język:</strong>
   <%= @gist.lang %>
 </p>
 <p>
-  <strong>Snippet:</strong>
+  <strong>Kod:</strong>
 </p>
 <%= raw Pygments.highlight(@gist.snippet, lexer: @gist.lang) %>
 <p>
-  <strong>Description:</strong>
+  <strong>Opis:</strong>
   <%= @gist.description %>
 </p>
-<%= link_to 'Edit', edit_gist_path(@gist) %> |
-<%= link_to 'Back', gists_path %>
+
+<%= link_to 'Edytuj', edit_gist_path(@gist), :class => "btn btn-warning" %>
+<%= link_to 'Cofnij', gists_path, :class => "btn btn-danger" %>
