--- a/app/assets/stylesheets/scaffold.css
+++ b/app/assets/stylesheets/scaffold.css
@@ -11,11 +11,39 @@ pre {
   padding: 10px;
   font-size: 13px;
   text-align: left;
+  margin: 7px;
 }
 
 a { color: #fff; text-decoration: none; font-weight:bold; }
 a:visited { color: #fff; text-decoration: none;}
 a:hover { color: #fff; text-decoration: none; }
+
+textarea
+{
+background-color: #1888b9;
+width: 100%;
+height: 500px;
+
+}
+
+input
+{
+background-color: #1888b9;
+}
+
+#noticewlasny
+{
+background-color: #1888b9;
+font-size: 26px;
+color: #fff;
+text-align: center;
+margin: 5px;
+line-height: normal;
+background-color: #5cb85c;
+border-color: #4cae4c;
+border-radius: 4px;
+
+}
 
 div.field, div.actions {
   margin-bottom: 10px;
