--- a/app/views/gists/edit.html.erb
+++ b/app/views/gists/edit.html.erb
@@ -2,5 +2,8 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @gist %> |
-<%= link_to 'Back', gists_path %>
+<%= link_to 'Wyświetl', @gist, data: { confirm: 'Wszelkie niezachowane zmiany zostaną utracone!' }, :class => "btn btn-info" %>
+<%= link_to 'Cofnij', gists_path, data: { confirm: 'Wszelkie niezachowane zmiany zostaną utracone!' }, :class => "btn btn-danger" %>
+
+
+
