--- a/app/views/gists/index.html.erb
+++ b/app/views/gists/index.html.erb
@@ -6,7 +6,7 @@
       <th>Kod</th>
       <th>Język</th>
       <th>Opis</th>
-      <th colspan="3"></th>
+      <th colspan="3">Opcje</th>
     </tr>
   </thead>
 
@@ -16,9 +16,9 @@
         <td><%= raw Pygments.highlight(gist.snippet.length > 50 ? gist.snippet[0,50] + "..." : gist.snippet, lexer: gist.lang) %></td>
         <td><%= gist.lang %></td>
         <td><%= gist.description %></td>
-        <td><button type="button" class="btn btn-info btn-lg"><%= link_to 'Podgląd', gist %></td>
-        <td><button type="button" class="btn btn-warning btn-lg"><%= link_to 'Edycja', edit_gist_path(gist) %></td>
-        <td><button type="button" class="btn btn-danger btn-lg"><%= link_to 'Usuń', gist, method: :delete, data: { confirm: 'Czy jesteś pewny?' } %></button></td>
+        <td><%= link_to 'Wyświetl', gist,  :class => "btn btn-info  btn-lg" %></td>
+        <td><%= link_to 'Edytuj', edit_gist_path(gist), :class => "btn btn-warning  btn-lg" %></td>
+        <td><%= link_to 'Usuń', gist, method: :delete, data: { confirm: 'Czy na pewno usunąć?' }, :class => "btn btn-danger btn-lg" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,5 @@
 
 <br>
 
-<button type="button" class="btn btn-success btn-lg btn-block"><%= link_to 'Dodaj kod', new_gist_path %></button>
+<%= link_to 'Dodaj kod', new_gist_path, :class => "btn btn-success btn-lg btn-block" %></button>
+
