--- a/app/views/gists/new.html.erb
+++ b/app/views/gists/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<button type="button" class="btn btn-danger btn-lg"><%= link_to 'Cofnij', gists_path %></button>
+<%= link_to 'Cofnij', gists_path, :class => "btn btn-danger" %>
