--- a/app/views/gists/_form.html.erb
+++ b/app/views/gists/_form.html.erb
@@ -1,4 +1,11 @@
 <%= form_for(@gist) do |f| %>
+
+<%
+  all_lexers = Pygments.lexers.flatten.select.with_index(offset = 0) { |x,i| i % 2 == 0 }.sort
+  all_lexers = all_lexers.delete_if { |x| x =~ /.\s./ }
+  all_lexers = all_lexers.map { |x| x.downcase }
+%>
+
   <% if @gist.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@gist.errors.count, "error") %> prohibited this gist from being saved:</h2>
@@ -17,7 +24,7 @@
   </div>
   <div class="field">
     <%= f.label :język %><br>
-    <%= f.text_field :lang %>
+    <%= f.select :lang, all_lexers %>
   </div>
   <div class="field">
     <%= f.label :opis %><br>
