--- a/app/assets/stylesheets/scaffold.css
+++ b/app/assets/stylesheets/scaffold.css
@@ -14,6 +14,23 @@ pre {
   margin: 7px;
 }
 
+@media 
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+
+body, p, ol, ul, td {
+  font-size:   14px;
+  line-height: 14px;
+}
+
+pre {
+  font-size: 11px;
+}
+}
+
+
+}
+
 a { color: #fff; text-decoration: none; font-weight:bold; }
 a:visited { color: #fff; text-decoration: none;}
 a:hover { color: #fff; text-decoration: none; }
