--- a/app/views/gists/_form.html.erb
+++ b/app/views/gists/_form.html.erb
@@ -28,7 +28,7 @@
   </div>
   <div class="field">
     <%= f.label :opis %><br>
-    <%= f.text_field :description %>
+    <%= f.text_field :description, :maxlength => 100 %>
   </div>
 <br>
   <div class="actions">
