--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,6 +3,12 @@
     <div class="container">
       	<a href="/gists" class="btn btn-primary btn-lg active" role="button"> Strona główna</a>
 	<a title="Tylko dla wybranych ;)" href="https://github.com/lipek92/my_gists" class="btn btn-primary btn-lg active" role="button"> Projekt na Github'ie</a>
+<div class="pull-right" style="padding: 3px;">
+  <%= form_tag gists_path, :method => 'get',:class =>"form-search", :id => "gists_search" do %>
+  <%= text_field_tag :search, params[:search], :class => 'input search-query'%>
+  <%= submit_tag "Szukaj", :name => nil, :class => 'btn btn-primary active' %>
+  <% end %>
+</div>
     </div>
   </div>
 </header>
